# azimuth

./: .codespellignore  .dockerignore  .gitattributes  .gitignore  .gitmodules  .stestr.conf  CHANGES.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.txt  VERSION  alembic.ini.example  application.ini.example  azimuth-0.1.0-dev.0.add-logo.525.tgz  azimuth-0.1.0-dev.0.add-logo.526.tgz  azimuth-0.1.0-dev.0.add-logo.528.tgz  azimuth-0.1.0-dev.0.app-cred-roles.761.tgz  azimuth-0.1.0-dev.0.bug-generate-cluster-id.762.tgz  azimuth-0.1.0-dev.0.caas-crd.703.tgz  azimuth-0.1.0-dev.0.caas-crd.704.tgz  azimuth-0.1.0-dev.0.caas-crd.705.tgz  azimuth-0.1.0-dev.0.caas-crd.706.tgz  azimuth-0.1.0-dev.0.caas-crd.707.tgz  azimuth-0.1.0-dev.0.caas-crd.708.tgz  azimuth-0.1.0-dev.0.caas-crd.709.tgz  azimuth-0.1.0-dev.0.caas-crd.711.tgz  azimuth-0.1.0-dev.0.caas-crd.714.tgz  azimuth-0.1.0-dev.0.caas-crd.715.tgz  azimuth-0.1.0-dev.0.caas-crd.716.tgz  azimuth-0.1.0-dev.0.caas-crd.717.tgz  azimuth-0.1.0-dev.0.caas-crd.718.tgz  azimuth-0.1.0-dev.0.caas-crd.719.tgz  azimuth-0.1.0-dev.0.caas-crd.720.tgz  azimuth-0.1.0-dev.0.caas-crd.764.tgz  azimuth-0.1.0-dev.0.caas-crd.765.tgz  azimuth-0.1.0-dev.0.caas-crd.766.tgz  (+1411 more)
api/: .dockerignore  Dockerfile  manage.py  requirements.txt  setup.cfg
api/azimuth/: authentication.py  identity.py  middleware.py  serializers.py  settings.py  urls.py  utils.py  views.py  zenith.py
api/azimuth/apps/: app.py  (+3 more)
api/azimuth_auth/: forms.py  middleware.py  settings.py  urls.py  views.py
api/azimuth_site/: gunicorn.py  middleware.py  settings.py-local  urls.py  wsgi.py
api/cloud_auth/: middleware.py  settings.py  urls.py  views.py
api/jasmin_cloud/: authentication.py  middleware.py  serializers.py  settings.py  urls.py  views.py
api/jasmin_cloud_site/: settings.py-local  urls.py
(+499 files in other folders)
