[metadata]
name = jasmin-cloud
description = API for managing projects in the JASMIN Cloud.
long_description = file: README.md
url = https://gitlab.com/cedadev/jasmin-cloud


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django
    djangorestframework
    django-settings-object
    docutils
    jasmin-ldap
    python-dateutil
    pyyaml
    rackit
    requests
    voluptuous
