[metadata]
name = jasmin-cloud
# Use a dummy version as it is not used for anything
# Versions are managed using Docker tags
version = 0.1.0
description = API for managing projects in the JASMIN Cloud.
long_description = file: README.md
url = https://gitlab.com/cedadev/jasmin-cloud


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    cryptography
    django
    djangorestframework
    django-settings-object
    docutils
    jasmin-ldap
    python-dateutil
    pyyaml
    rackit
    requests
    voluptuous
