[metadata]
name = azimuth
# Use a dummy version as it is not used for anything
# Versions are managed using Docker tags
version = 0.1.0
description = API for managing projects in an OpenStack cloud.
long_description = file: README.md
url = https://github.com/stackhpc/azimuth


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    cryptography
    django
    djangorestframework
    django-settings-object
    docutils
    easykube
    easysemver
    httpx
    jasmin-ldap
    jinja2
    jsonschema
    python-dateutil
    pyyaml
    rackit
    requests
    voluptuous

[options.extras_require]
runtime =
    django-flexi-settings
    gunicorn
    tzdata
    whitenoise
